# discord_bridgebot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.github/: dependabot.yml
.github/workflows/: build-docker.yml  rust-clippy.yml
migrations/2023-10-21-075138_create_channels/: down.sql  up.sql
src/: checks.rs  data.rs  lib.rs  main.rs  models.rs  schema.rs
src/commands/: bridge.rs  list_bridges.rs  mod.rs  unbridge.rs  unbridge_all.rs
