[package]
name = "discord_bridgebot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
serenity = { version = "0.12.0", features = ["framework", "standard_framework"] }
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
diesel = { version = "2.1.6", features = ["postgres"] }
log = "0.4"
env_logger = "0.11"
diesel_migrations = "2.1.0"
