[package]
name = "discord_bridgebot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11"
log = "0.4"

poise = "0.6.1"
serenity = { version = "0.12.4", features = ["framework", "standard_framework", "model"] }
tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread"] }

# TODO: bump to 2.2.x
diesel = { version = "2.2.12", features = ["postgres"] } # "chrono", "serde_json"] ..?
diesel_migrations = "2.1.0"
emojis = "0.6.4"
emoji = "0.2.1"
